# near-appstore

./: .gitignore  Cargo.toml  README.md
scripts/: deploy.sh  get-balance.sh  publish-sample-apps.sh  setup-accounts.sh
src/: lib.rs
